tests/miniJava/neg/006823_mutation.MiniJava
class public { public static void Main ( String [ ] java ) { { } } }
